# tinyrenderer

./: .gitignore  CMakeLists.txt  readme.md
Source/: colors.cpp  colors.h  geometry.h  lesson1.cpp  lesson1.h  lesson2.cpp  lesson2.h  main.cpp  utility.cpp  utility.h
